--- a/SantiyeYonetim.WebMVC/Areas/ProjectAdmins/Views/Shared/_LeftSideBar.cshtml
+++ b/SantiyeYonetim.WebMVC/Areas/ProjectAdmins/Views/Shared/_LeftSideBar.cshtml
@@ -74,7 +74,7 @@
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="login.html">Aktif Projeler</a>
+                        <a asp-area="ProjectAdmins" asp-controller="Projects" asp-action="GetAllProjects" class="collapse-item">Aktif Projeler</a>
                         <a class="collapse-item" href="register.html">Biten Projeler</a>
                         <a class="collapse-item" href="forgot-password.html">Bütün Projeler</a>
 @*                        <div class="collapse-divider"></div>
